# llm-duet

./: .gitignore  CLAUDE.md  Duet-llm todos.md  LICENSE  README.md  TODO_anthropic_integration.md  duet.py  iceBreakers.md  listener.py  personaGen.py  pyproject.toml  requirements.txt  run.sh
personas/: agent_a.md  agent_a_open.md  agent_a_unhinged.md  agent_b.md  agent_b_open.md  agent_b_unhinged.md  agent_user.md  jack.md  jamie.md  judge.md  riley.md  room.md
